<resources>

    <string name="appName">Vinyls K</string>
    <string name="delete">Supprimer</string>
    <string name="menu_settings">Settings</string>
    <string name="singerName">Nom de l\'artiste</string>
    <string name="songName">Nom de la chanson</string>
    <string name="register">Ajouter</string>
    <string name="reset">Effacer</string>
    <string name="submit">Sauver</string>
    <string name="takePhoto">Photo</string>
    <string name="takePicture">Prendre une photo</string>
    <string name="titleActivityMain">MainActivity</string>
    <string name="update">Modifier</string>
    <string name="validatePicture">Valider</string>
</resources>