<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singerName" />

        <EditText
            android:id="@+id/singerNameAdd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songName" />

        <EditText
            android:id="@+id/songTitleAdd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/take_image_from_camera"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="takeImageFromCamera"
            android:layout_height="wrap_content"
            android:text="@string/takePhoto"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="URI : "
            android:id="@+id/camera_url_tv"
            android:layout_x="70dp"
            android:layout_y="550dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </TableRow>


    <ImageView
        android:layout_width="50dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:id="@+id/image_from_camera"/>

</TableLayout>



