<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singerName" />

            <EditText
                android:id="@+id/singerNameEdit_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songName" />

            <EditText
                android:id="@+id/songTitleEdit_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <ImageView
            android:id="@+id/img_from_camera"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/edit_message" />

        <TableRow>
            <Button
                android:id="@+id/take_image_from_camera"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:onClick="takeImageFromCamera"
                android:layout_height="wrap_content"
                android:text="@string/takePhoto"/>
        </TableRow>
    </TableLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>